--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>HappyShooting - Schwurbler</h1>
+    <a href="bom/schwurbler-mvp-1.2.ibom.html">MVP Bom</a>
 </body>
 </html>
